# yazelix-zellij-popup

./: AGENTS.md  Cargo.toml  README.md  flake.nix
.beads/: config.yaml  issues.jsonl
examples/: gitui.kdl
src/: lib.rs  main.rs  popup_contract.rs
