[package]
name = "yazelix_zellij_popup"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Zellij plugin for toggling configured floating TUI popups"
repository = "https://github.com/luccahuguet/yazelix-zellij-popup"

[[bin]]
name = "yzpp"
path = "src/main.rs"
test = false
bench = false

[dependencies]
kdl = "4.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zellij-tile = "0.44.0"
